@@ -53,6 +53,18 @@
             </p>
 
             <div class="download">
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.22/cheese-2.22.1.tar.gz"
+                title="Source code of the latest stable release">
+                <img src="data/images/package-x-generic.png" alt="source package" />
+                Cheese 2.22.1
+              </a>
+              <p>
+              was released on April 7th 2008<br />
+              md5sums: e1e290e5b6df7ac9e7f79ee824710d01
+              </p>
+            </div>
+
+            <div class="download">
               <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.22/cheese-2.22.0.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
