@@ -135,6 +135,22 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>April 7th 2008</h3>
+          <p>
+          Stable verson 2.22.1 was released!
+          New features since previous stable version include:
+          </p>
+          <ul>
+            <li>fix crashing of cheese on some webcam devices</li>
+            <li>allow opening of webcam devices listed in gconf</li>
+            <li>set the max waiting time for detecting a camera to 10 seconds</li>
+            <li>do not allow to take pictures, while the webcam is initializing</li>
+            <li>show our fancy countdown widget by default</li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download.html">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-April/msg00026.html">full release notes</a>)
+
           <h3>April 1st 2008</h3>
           <p>
             <a href="http://home.cs.tum.edu/~siegel/news/2008_04_01-bye_bye_cheese">April fool's joke?</a><br/>
@@ -166,21 +182,6 @@
             <li>added/updated translations</li>
           </ul>
           <a href="download.html">Download it</a> (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-March/msg00051.html">full release notes</a>)
-
-          <h3>January 14th 2008</h3>
-          <p>
-          Unstable verson 2.21.5 was released!
-          New features since previous stable version include:
-          </p>
-          <ul>
-            <li>version bump to follow the gnome release cycle</li>
-            <li>add a stylish countdown widget</li>
-            <li>use the gst-player by Mathias Hasselman for playing the shutter sound</li>
-            <li>make cheese build against uninstalled gstreamer</li>
-            <li>a lot of bug fixes</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download.html">Download it</a> (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-January/msg00041.html">full release notes</a>)
 
         </div>
       </div><!-- bottom -->
