@@ -1,3 +1,9 @@
+2008-04-08  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html: 
+	  add the cheese 2.22.1 release
+
 2008-04-06  Dave Neary <bolsh@gnome.org>
 
 	* www.gnome.org/press/releases/2008-04-mobilesummit.wml:
